--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
-gunicorn
-flask
-postgres
-flask_sqlalchemy
+alembic==1.8.1
+autopep8==1.6.0
+click==8.1.3
+distlib==0.3.5
+filelock==3.7.1
+Flask==2.1.3
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+gunicorn==20.1.0
+itsdangerous==2.1.2
 Jinja2==3.0.3
+Mako==1.2.1
+MarkupSafe==2.1.1
+platformdirs==2.5.2
+postgres==4.0
+psycopg2-binary==2.9.3
+psycopg2-pool==1.1
+pycodestyle==2.9.1
+SQLAlchemy==1.4.39
+toml==0.10.2
+virtualenv==20.16.3
 Werkzeug==2.0.0
-psycopg2-binary
-flask-migrate
